--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 07 16:27:01 IST 2015
-sdk.dir=/home/harsh/Android/Sdk
+sdk.dir=/root/Android/Sdk
