--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".DisplayData" />
-        <activity android:name=".FloatingDatePicker"
-            android:theme="@style/AppTheme.PopupOverlay"/>
+        <activity
+            android:name=".FloatingDatePicker"
+            android:theme="@style/AppTheme.PopupOverlay" />
         <activity android:name=".FloatingForm" />
         <activity
             android:name=".DisplayData2"
             android:label="@string/title_activity_display_data2"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".InstantBook"
             android:label="@string/title_activity_instant_book"
@@ -32,13 +33,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EditForm"
-
+        <activity
+            android:name=".EditForm"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"
-        >
-
-        </activity>
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".Loader"></activity>
     </application>
 
 </manifest>
