--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,11 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
 }
 
-dependencies{
+dependencies {
+    compile 'com.android.support:support-v4:23.+'
+    compile 'com.android.support:recyclerview-v7:23.+'
+}
+dependencies {
     androidTestCompile fileTree(dir: 'libs', include: ['robotium-solo-5.5.3.jar'])
     androidTestCompile('com.squareup:fest-android:1.0.8') {
         exclude module: 'support-v4'
